--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -39,5 +39,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <form name="contact" data-netlify="true" hidden></form>
+    <div>
+      <input type="text" id="name" name="name" />
+      <input type="email" id="email" name="email" />
+      <input type="text" id="subject" name="subject" />
+      <textarea>
+          rows="6"
+          placeholder="Type Your Message Here"
+          name="message"/>
+        </textarea
+      >
+    </div>
   </body>
 </html>
