--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <form name="contact" data-netlify="true" hidden></form>
+    <form name="contact" data-netlify="true" hidden>
     <div>
       <input type="text" id="name" name="name" />
       <input type="email" id="email" name="email" />
@@ -51,5 +51,6 @@
         </textarea
       >
     </div>
+  </form>
   </body>
 </html>
