--- a/public/index.html
+++ b/public/index.html
@@ -39,18 +39,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <form name="contact" data-netlify="true" hidden>
-    <div>
-      <input type="text" id="name" name="name" />
-      <input type="email" id="email" name="email" />
-      <input type="text" id="subject" name="subject" />
-      <textarea>
+    <!-- <form name="contact" data-netlify="true" hidden>
+      <div>
+        <input type="text" id="name" name="name" />
+        <input type="email" id="email" name="email" />
+        <input type="text" id="subject" name="subject" />
+        <textarea>
           rows="6"
           placeholder="Type Your Message Here"
           name="message"/>
-        </textarea
-      >
-    </div>
-  </form>
+      </textarea
+        >
+      </div>
+    </form> -->
   </body>
 </html>
